# rlc

./: .gitignore  LICENSE  README.md  TODO  meson.build  meson.options
bash/: _complete_rphiic  meson.build
src/: 2q  Session.vim  arg.c  arg.h  array.c  array.h  attr.h  color.c  color.h  colorprint.h  dict.c.old  dict.h.old  err.c  err.h  file.c  file.h  json.c  json.h  lut.h  map.c  map.h  meson.build  platform-detect.h  rlc.h  str.c  str.h  str2.c  str2.h  tui.c  tui.h  utf8.c  utf8.h  vec.h  wstr.c  wstr.h
src/arg/: argx.h
src/rl/: array.c  color.c  file.h  meson.build
src/rlc/: array.c  array.h  color.h  err.c  err.h  file.c  lut.h  vec.h
test/: .termfu  test_arg  test_arg.c  test_arg.completion  test_arg.conf  test_arg.sh  test_cstr.c  test_file.c  test_str.c  test_str.sh  test_str2.c  test_wstr.c
